# gestor-financiero

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.deploy  examen_rust.rs  fly.toml
Informes/: INFORME_DEPLOY.md
analizador/: Cargo.toml
analizador/src/: main.rs
src/: db.rs  main.rs
static/: index.html
