[package]
name = "analizador-gestor"
version = "0.1.0"
edition = "2021"
description = "Analizador CLI para consultar estadísticas de la BD del Gestor Financiero"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "rust_decimal"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dotenvy = "0.15"
prettytable-rs = "0.10"